tutorial/sec/admission-webhook/manifest/kyverno/deploy-allow-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  labels:
    owner: my
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          image: busybox
          command:
            - sleep
            - "36000"
          imagePullPolicy: IfNotPresent
